# sysrepo-plugin-dt-status

./: CMakeLists.txt  Makefile
src/: CMakeLists.txt  status.c  status.h
src/yang/: status@2015-12-1.yang
