cmake_minimum_required(VERSION 2.6)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules/")
set(CMAKE_INSTALL_LIBDIR "/usr/lib/sysrepo/plugins")

project(sysrepo-plugin-dt-status)

file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
file(MAKE_DIRECTORY ${CMAKE_INSTALL_LIBDIR})

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)

add_definitions(-O0 -Wall)

set(SOURCES
	status.c)

ADD_LIBRARY(${CMAKE_PROJECT_NAME} MODULE ${SOURCES})

FIND_LIBRARY(sysrepo NAMES sysrepo)
FIND_LIBRARY(uci NAMES uci)
FIND_PACKAGE(LIBUBOX REQUIRED)
INCLUDE_DIRECTORIES(${LIBUBOX_INCLUDE_DIR})
FIND_PACKAGE(LIBUBUS REQUIRED)
INCLUDE_DIRECTORIES(${JSON-C_INCLUDE_DIR})

TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}
  ${uci}
  ${LIBUBOX_LIBRARIES}
  ${LIBUBUS_LIBRARIES}
  json-c
  ${sysrepo})

INSTALL(TARGETS ${CMAKE_PROJECT_NAME} LIBRARY
  DESTINATION ${CMAKE_INSTALL_LIBDIR})

# INSTALL(
# 	FILES
# 		yang/status@2015-12-1.yang
# 	DESTINATION /etc/yang/
# )
# add_custom_command(TARGET ${CMAKE_PROJECT_NAME} POST_BUILD
#   COMMAND sysrepoctl --install --yang=/etc/sysrepo/yang/status@2015-12-1.yang)
